--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -40,19 +40,9 @@
 					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
 					
 					<div class="col-lg-6 col-xs-12 col-sm-12 col-md-6">
-                                <div ui-jq="easyPieChart" ui-options="{
-                      easing: 'easeOutBounce',
-                      barColor: '{{app.color.accent}}',
-                      trackColor: '#f5f5f5',
-                      scaleColor: '#eaeaea',
-                      lineCap: 'square',
-                      lineWidth: 10,
-                      size: 120,
-                      animate: 1000,
-                      percent: 95
-                    }">
+                                <div ui-jq="easyPieChart" ui-options={{optionsChart}} >
                                     <div>
-                                        <span class="text-primary percent">{{recordSynced}}%</span>
+                                        <span class="text-primary percent">{{percentage}}%</span>
                                     </div>
                                 </div>
                                 <h4 class="text-center margin-top-10 margin-bottom-10">Records Synced</h4>
@@ -135,6 +125,7 @@
 
 									
                                 </tr>
+                                </tr>
                                 
                             </tbody>
 							<tfoot class="hide-if-no-paging">
@@ -150,7 +141,7 @@
 							   direction-links="true"
 							   boundary-links="true"
 								auto-hide="true" >
-							</dir-pagination-controls>
+						</dir-pagination-controls>
                     </div>
 					
 					
