--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -1,5 +1,5 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Smart Table';">
-    <div class="col-lg-12" ng-controller="MasterDataController">
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Compare MYSQL & Bolton';">
+    <div class="col-lg-12" ng-controller="MasterDataBoltonController">
         
 					
 					
@@ -21,10 +21,11 @@
                                 <i class='fa fa-database icon-lg'></i>
                                 <h2 count-to="{{MysqlRecords}}" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
-                                <span>Records In MySQL</span>
+                                <span>Number of Interfaces</span>
                             </div>
                         </div>
                     </div>
+					
 					
                     <div class="col-lg-15 col-md-4 col-xs-2 col-sm-6">
                         <div class="tile-counter bg-primary">
@@ -32,7 +33,7 @@
                                 <i class='fa fa-file-o'></i>
                                 <h2 count-to="{{missingRows}}" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
-                                <span>Records In Generated file</span>
+                                <span>Generated files Missing Records</span>
                             </div>
                         </div>
                     </div>
@@ -99,7 +100,7 @@
 					<br>
 					
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
-                        <table class="table table-striped" ui-jq="footable" data-filter="#filter" class="table table-striped">
+                        <table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-navigation=".pagination" data-page-size="7" class="table table-striped">
                             <thead>
                                 <tr>
                                     <th data-toggle="true">
@@ -117,7 +118,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr dir-paginate="x in mdRecordsArray|itemsPerPage:10" >
+                                <tr  ng-repeat="x in mdRecordsArray " >
                                     <td>{{ x.Entry1 }}</td>
 									<td>{{ x.Entry2 }}</td>
 									<td>{{ x.Entry3 }}</td>
@@ -128,20 +129,24 @@
                                 </tr>
                                 
                             </tbody>
+							
+							
+							
+							
+							
 							<tfoot class="hide-if-no-paging">
-                                <tr>
-                                   
-                               </tr>
-                           </tfoot>
+    <tr>
+        <td colspan="7" class="text-center">
+            <ul class="pagination pagination-centered">
+
+            </ul>
+        </td>
+    </tr>
+</tfoot>
 					
                         </table>
 						
-						<dir-pagination-controls
-							   max-size="10"
-							   direction-links="true"
-							   boundary-links="true"
-								auto-hide="true" >
-						</dir-pagination-controls>
+						
                     </div>
 					
 					
