--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -1,5 +1,5 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Compare MYSQL & Bolton';">
-    <div class="col-lg-12" ng-controller="MasterDataBoltonController">
+    <div class="col-lg-12" ng-controller="MasterDataBoltonController" ng-init='load()' >
         
 					
 					
@@ -41,7 +41,10 @@
 					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
 					
 					<div class="col-lg-6 col-xs-12 col-sm-12 col-md-6">
-                                <div ui-jq="easyPieChart" ui-options={{optionsChart}} >
+                                <div id="aa"  ui-jq="easyPieChart" ui-options="{ easing: 'easeOutBounce', barColor: 'orange', trackColor: '#f5f5f5', scaleColor: '#eaeaea', lineCap: 'square', lineWidth: 8, size: 130,animate: 1000, percent: 50 }" 
+										 >
+								<!-- data-percent={{percentage}} -->
+								<!-- ui-options="{ easing: 'easeOutBounce', barColor: 'orange', trackColor: '#f5f5f5', scaleColor: '#eaeaea', lineCap: 'square', lineWidth: 15, size: 130,animate: 1000,percent: {{percentage}} }" -->
                                     <div>
                                         <span class="text-primary percent">{{percentage}}%</span>
                                     </div>
@@ -100,7 +103,9 @@
 					<br>
 					
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
-                        <table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-navigation=".pagination" data-page-size="7" class="table table-striped">
+                        
+						
+						<table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-size="10" class="table table-striped">
                             <thead>
                                 <tr>
                                     <th data-toggle="true">
@@ -117,7 +122,9 @@
                                     </th>
                                 </tr>
                             </thead>
-                            <tbody>
+							
+                            
+							<tbody>
                                 <tr  ng-repeat="x in mdRecordsArray " >
                                     <td>{{ x.Entry1 }}</td>
 									<td>{{ x.Entry2 }}</td>
@@ -130,20 +137,13 @@
                                 
                             </tbody>
 							
-							
-							
-							
-							
-							<tfoot class="hide-if-no-paging">
-    <tr>
-        <td colspan="7" class="text-center">
-            <ul class="pagination pagination-centered">
-
-            </ul>
-        </td>
-    </tr>
-</tfoot>
-					
+                            <tfoot class="hide-if-no-paging">
+                                <tr>
+                                    <td colspan="10" class="text-center">
+                                        <ul class="pagination"></ul>
+                                    </td>
+                                </tr>
+                            </tfoot>
                         </table>
 						
 						
