--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -1,4 +1,4 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Smart Table';">
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Compare SAP & MySQL';">
     <div class="col-lg-12" ng-controller="MasterDataController">
         
 					
@@ -10,8 +10,7 @@
                 <h2 class="title pull-left">Master Data</h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
-                    <i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
-                    <i class="box_close material-icons">close</i>
+                    
                 </div>
             </header>
             <div class="content-body padding-bottom-0">
@@ -40,7 +39,7 @@
 					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
 					
 					<div class="col-lg-6 col-xs-12 col-sm-12 col-md-6">
-                                <div ui-jq="easyPieChart" ui-options="{
+                                <div class="chart" ui-jq="easyPieChart" ui-options="{
                       easing: 'easeOutBounce',
                       barColor: '{{app.color.accent}}',
                       trackColor: '#f5f5f5',
@@ -48,8 +47,7 @@
                       lineCap: 'square',
                       lineWidth: 10,
                       size: 120,
-                      animate: 1000,
-                      percent: 95
+                      animate: 1000
                     }">
                                     <div>
                                         <span class="text-primary percent">{{recordSynced}}%</span>
@@ -80,8 +78,7 @@
                 <h2 class="title pull-left">Master Data</h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
-                    <i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
-                    <i class="box_close material-icons">close</i>
+                    
                 </div>
             </header>
             <div class="content-body padding-bottom-15">
