--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -171,6 +171,8 @@
                             </ul>
     </li>
 	
+	<!--
+	
 	<li href class="auto"> 
                             <a href="javascript:;">
                                 <i class="material-icons">apps</i>
@@ -184,6 +186,26 @@
                                 </li>
                             </ul>
     </li>
+	-->
+	
+	
+	<li href class="auto"> 
+                            <a href="javascript:;">
+                                <i class="material-icons">apps</i>
+                                <span class="title">Shipment</span>
+                                <span class="arrow material-icons">keyboard_arrow_right</span>
+                            </a>
+                            <ul class="wraplist wraplist-sub sub-menu dk" >
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.shipmentIdocs">Idocs Compare</a>
+                                </li>							
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.shipmentDetails">Details</a>
+                                </li>
+                            </ul>
+    </li>
+	
+	
 	
 	<li href class="auto"> 
                             <a href="javascript:;">
