--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -151,7 +151,7 @@
                             </a>
                             <ul class="wraplist wraplist-sub sub-menu dk" >
                                 <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.test">...</a>
+                                    <a ui-sref="app.tables.SettlementDetails">Details</a>
                                 </li>							
                            
                             </ul>
@@ -166,7 +166,7 @@
                             <ul class="wraplist wraplist-sub sub-menu dk" >
                     						
                                 <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.TruckStock">TruckStock</a>
+                                    <a ui-sref="app.tables.TruckStock">Details</a>
                                 </li>
                             </ul>
     </li>
