--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -64,12 +64,12 @@
                 </div>
 				<div class="clearfix"></div>
 				
-				<div class="row">
-                    <div  class="col-md-8 col-sm-12 col-xs-12 col-md-offset-2"  >
+				
+                    <div  class="col-md-6  col-md-offset-3"  >
                      <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" 
 					 ng-if="showChart" chart-options="myOptions" chart-legend="true"  ></canvas>
                     </div>
-                </div>
+                
 				
 				
 				<div style="text-align:-webkit-center">
