--- a/app/partials/Personal/TruckStock.html
+++ b/app/partials/Personal/TruckStock.html
@@ -5,7 +5,8 @@
 
 
 		<div class="col-lg-12">
-			
+		
+		
 
 
 
@@ -23,7 +24,72 @@
 				
 				
 				<div class="content-body padding-bottom-15">
+				
+				
+				<div class="col-md-12 col-sm-12 col-xs-12" ng-controller="JVectorMapDemoCtrl">
+                        <div style="width: 100%; height: 500px;" ui-jq="vectorMap" ui-options="{            
+                        map: 'world_mill_en',
+                        markers: {{world_markers}},
+                        normalizeFunction: 'polynomial',
+
+                        scaleColors: ['{{app.color.primary}}', '{{app.color.accent}}'],
+                        hoverOpacity: 0.7,
+                        hoverColor: false,
+                        regionsSelectable: true,
+                        markersSelectable: true,
+                        markersSelectableOne: true,
+                        panOnDrag: true,
+
+                        focusOn: {
+                            x: 0.5,
+                            y: 0.5,
+                            scale: 1,
+                            animate: true
+                        },
+                        regionStyle: {
+                            initial: {
+                                fill: '#cccccc',
+                                'fill-opacity': 1,
+                                stroke: 'none',
+                                'stroke-width': 5,
+                                'stroke-opacity': 0
+                            },
+                            hover: {
+                                fill: '{{app.color.accent}}',
+                                'fill-opacity': 1,
+                                cursor: 'pointer'
+                            },
+                            selected: {
+                                fill: '{{app.color.accent}}'
+                            },
+                            selectedHover: {}
+                        },
+                        markerStyle: {
+                            initial: {
+                                fill: '{{app.color.primary}}',
+                                stroke: '{{app.color.accent}}',
+                                'stroke-width': 0,
+                                r: 8
+                            },
+                            hover: {
+                                stroke: '{{app.color.warning}}',
+                                'stroke-width': 8,
+                                cursor: 'pointer'
+                            },
+                            selected: {
+                                fill: '{{app.color.accent}}',
+                                'stroke-width': 10,
+                            },
+                        },
+                        backgroundColor: '#ffffff',
+
+          }">
+                        </div>
+                    </div>
+				
+				
 					<div class="row">
+					
 					
 					
 					<label class="form-label" for="field-1">Select Date</label>
